[package]
name = "driver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
thiserror = "1.0.56"
winreg = "0.52.0"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.winapi]
git = "https://github.com/joaoviictorti/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
]
