[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk = "0.2.0"
wdk-alloc = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"
log = "0.4.21"
kernel-log = "0.1.3"

[build-dependencies]
wdk-build = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.wdk]