[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk = "0.3.0"
wdk-alloc = "0.3.0"
wdk-panic = "0.3.0"
wdk-sys = "0.3.0"

[build-dependencies]
wdk-build = "0.3.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.wdk]