[package]
name = "extract_wifi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.31.0"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_NetworkManagement_WiFi"] }
