[package]
name = "iat_camouflage"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
strip = "debuginfo"

[profile.release]
panic = "abort"
strip = "debuginfo"

[dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Kernel", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
