[package]
name = "iat_obfuscation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = "0.4.0"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_System_Kernel", 
    "Win32_System_Diagnostics_Debug", 
    "Win32_Foundation", 
    "Win32_System_SystemServices", 
    "Win32_System_LibraryLoader", 
    "Win32_System_WindowsProgramming", 
    "Win32_System_Threading",
    "Win32_System_SystemInformation"    
]

