[package]
name = "LdrLoadDll_Unhook"
version = "0.1.0"
edition = "2021"

[dependencies]
[dependencies.winapi]
version = "0.3.9"
features = ["minwindef", "ntdef"]
 [dependencies.windows]
 version = "0.56.0"
 features = [
     "Win32_Foundation",
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_LibraryLoader",
     "Win32_System_Memory",
     "Win32_System_SystemServices",
 ]




