[package]
name = "pe_injection"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_SystemInformation", 
    "Win32_System_SystemServices", 
    "Win32_System_Memory", 
    "Win32_System_LibraryLoader", 
    "Win32_System_WindowsProgramming", 
    "Win32_System_Threading", 
    "Win32_System_Kernel",
    "Win32_Security"
]
