[package]
name = "minidump"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29.11"

[dependencies.windows]
version = "0.52.0" 
features = [
    "Win32_Foundation", 
    "Win32_Storage_FileSystem", 
    "Win32_System_Kernel", 
    "Win32_System_Memory", 
    "Win32_System_Diagnostics", 
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_Threading", 
    "Win32_Security"
]
