[package]
name = "module_overloading"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[dependencies.windows] 
version = "0.59.0"
features = [
    "Win32_System_SystemServices", 
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_SystemInformation", 
    "Wdk_Storage_FileSystem", 
    "Wdk_Foundation", 
    "Win32_System_Memory", 
    "Win32_Storage_FileSystem", 
    "Win32_Security", 
    "Win32_System_LibraryLoader", 
    "Win32_System_WindowsProgramming", 
    "Win32_System_Threading", 
    "Win32_System_Kernel",
    "Wdk_System_Memory"
] 
