[package]
name = "module_stomping"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.54.0" 
features = ["Win32_System_Memory", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_Threading", "Win32_System_SystemServices", "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation", "Win32_System_LibraryLoader"]
