[package]
name = "ntdll_unhooking"
version = "0.1.0"
edition = "2021"

[dependencies]
ntapi = "0.4.1"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_System", 
    "Win32_System_Threading", 
    "Win32_Foundation", 
    "Win32_System_Kernel", 
    "Win32_System_WindowsProgramming", 
    "Win32_Storage", 
    "Win32_Storage_FileSystem", 
    "Win32_Security", 
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_SystemServices", 
    "Win32_System_SystemInformation", 
    "Win32_System_Memory"
]
