[package]
name = "named_pipe_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pipe_server"
path = "src/server.rs"

[[bin]]
name = "pipe_client"
path = "src/client.rs"

[dependencies]
windows = { version = "0.54.0", features = ["Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security"] }

