[package]
name = "args_spoofing-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = "0.9.0"
windows = { version = "0.52.0", features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Wdk_System_Threading", "Win32_System_Kernel", "Win32_System_Memory"] }
