[package]
name = "no_crt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "debuginfo"

[dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Memory"] }
