[package]
name = "local_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.52.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
