[package]
name = "dll_injection"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation", 
    "Win32_System_Threading", 
    "Win32_System_Memory", 
    "Win32_System_Diagnostics_Debug", 
    "Win32_Security", 
    "Win32_System_LibraryLoader"
]